--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,6 +35,10 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
   provider: ^6.0.3
+  day_night_switcher: ^0.2.0+1
+
+  sqflite:
+  path:
 
 dev_dependencies:
   flutter_test:
